--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Ball Shot",
-  "start_url": "/",
+  "start_url": "/ball-shot/",
   "icons": [
     {
       "src": "images/night.png",
